<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".SignIn">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginBottom="30dip"
            android:layout_gravity="center">



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_hint"
                android:layout_gravity="center"
                android:textSize="40dip"
                android:textColor="@android:color/holo_orange_dark"
                tools:ignore="SpUsage"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:text="@string/connect"
                android:layout_gravity="center"
                android:textSize="15dip"
                android:textColor="@android:color/black"
                tools:ignore="SpUsage"/>
        <EditText
                android:layout_width="200dip"
                android:id="@+id/email"
                tools:ignore="Autofill"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:inputType="textEmailAddress"
                android:hint="@string/mail_hint"/>
        <EditText
                android:layout_width="200dip"
                tools:ignore="Autofill"
                android:id="@+id/password"
                android:layout_marginTop="10dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:id="@+id/connexion"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/signin_hint"
                android:layout_marginTop="20dip"
                android:onClick="signIn"
                android:background="@drawable/login"
                tools:ignore="ContentDescription"
                android:foreground="?selectableItemBackground"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noaccount_text"
                android:layout_gravity="center"
                android:layout_marginTop="30dip"
                android:textColor="@android:color/holo_green_dark"/>

        <Button
                android:layout_width="190dip"
                android:id="@+id/new_account"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:hint="@string/newaccount_hint"
                android:layout_marginTop="20dip"
                android:onClick="signUp"
                android:textColorHint="@color/common_google_signin_btn_text_light"
                android:background="@drawable/background3"
                android:foreground="?selectableItemBackground"/>



    </LinearLayout>

    </ScrollView>



</LinearLayout>