<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".AddOffre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
            tools:ignore="UselessParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginBottom="30dip"
            android:orientation="vertical"
            android:layout_gravity="center">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selected_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ImageButton
                android:background="@drawable/addimage"
                android:layout_width="wrap_content"
                android:id="@+id/addimage"
                android:layout_height="wrap_content"
                android:hint="@string/signin_hint"
                android:layout_marginTop="20dip"
                tools:ignore="ContentDescription"
                android:onClick="addImage"
                android:foreground="?selectableItemBackground"/>


        <EditText
                android:layout_width="fill_parent"
                android:id="@+id/titre"
                tools:ignore="Autofill"
                android:layout_marginTop="10dip"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/titleoffer_hint"/>
        <EditText
                android:layout_width="fill_parent"
                tools:ignore="Autofill"
                android:id="@+id/texte"
                android:layout_marginTop="10dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textMultiLine"
                android:maxLines="7"
                android:scrollbars="vertical"
                android:isScrollContainer="true"
                android:hint="@string/offerdescription_hint"/>

        <EditText
                android:layout_width="fill_parent"
                tools:ignore="Autofill"
                android:id="@+id/prix"
                android:layout_marginTop="10dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:hint="@string/offerprice_hint"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:id="@+id/location"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/maps"
                android:scaleType="fitXY"
                android:layout_marginTop="20dip"
                android:onClick="getLocation"/>

        <TextView
                android:layout_width="fill_parent"
                tools:ignore="Autofill"
                android:id="@+id/locationText"
                android:layout_marginTop="10dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>


        <Button
                android:layout_width="120dip"
                android:id="@+id/addOffre"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:hint="@string/addofferbutton_hint"
                android:layout_marginTop="20dip"
                android:onClick="addOffre"
                android:background="@drawable/background3"
                android:foreground="?selectableItemBackground"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>