<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ListeOffre">

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="4dip"
            app:tabBackground="@color/SkyBlue"
            app:tabTextColor="@color/white"
            app:tabMode="fixed">
    </com.google.android.material.tabs.TabLayout>

<ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="10dip">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titre"
                android:text="@string/titre_offre"
                android:textSize="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:textColor="#000000" android:layout_marginStart="10dip"
                tools:ignore="RelativeOverlap,SpUsage"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_price"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:id="@+id/prix"
                android:textSize="20dip"
                android:layout_below="@+id/titre"
                android:textColor="#000000"
                tools:ignore="RelativeOverlap,SpUsage"/>

        <com.like.LikeButton
                app:icon_type="star"
                app:icon_size="12dip"
                android:id="@+id/likebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/fab"
                android:layout_alignTop="@+id/titre"
                app:anim_scale_factor="5"
                android:layout_alignParentEnd="true"/>

        <com.synnapps.carouselview.CarouselView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dip"
                android:layout_below="@+id/prix"
                android:layout_marginTop="20dip"
                android:layout_centerHorizontal="true"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="3dip"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:id="@+id/date"
                android:textSize="15dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/image"
                android:textColor="#000000"
                tools:ignore="SpUsage"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nblikes"
                android:layout_below="@+id/image"
                android:layout_marginTop="10dip"
                android:textSize="19sp"
                android:layout_marginLeft="15dip"
                android:layout_marginStart="15dip"
                android:textColor="@android:color/holo_orange_dark"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_below="@+id/date"
                android:hint="@string/description_hint"
                android:layout_marginTop="40dip"
                android:textSize="17dip"
                tools:ignore="SpUsage"/>

        <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:clickable="true"
                android:focusable="true"
                android:maxLines="5"
                android:padding="16dp"
                android:textSize="16dip"
                android:layout_below="@+id/description"
                android:textColor="#000000"
                tools:ignore="SpUsage"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/more_button"
                android:layout_marginTop="-20dip"
                android:layout_below="@+id/text"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:src="@drawable/fleche1"
                android:layout_alignRight="@+id/text"
                tools:ignore="ContentDescription"
                android:layout_alignEnd="@+id/text"/>


        <fragment
                android:id="@+id/map"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_below="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        <ImageView
                android:id="@+id/transparent_image"
                android:layout_below="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@android:color/transparent" />


    </RelativeLayout>



</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

